fix: try shorter path

--- a/.github/workflows/build-android-fabric-windows.yml
+++ b/.github/workflows/build-android-fabric-windows.yml
@@ -29,6 +29,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          path: repo
 
       - name: Setup JDK 17
         uses: actions/setup-java@v4
