--- a/.github/workflows/build-android-fabric-windows.yml
+++ b/.github/workflows/build-android-fabric-windows.yml
@@ -30,7 +30,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          path: repo
+          path: react-native-keyboard-controller
+
+      - name: Move to shorter path
+        shell: pwsh
+        run: |
+          # Move the entire project to a much shorter path
+          # Original: D:\a\react-native-keyboard-controller\react-native-keyboard-controller
+          # New: D:\project
+          Move-Item "D:\a\react-native-keyboard-controller\react-native-keyboard-controller" "D:\project"
+
+          # Verify the move
+          Write-Host "Contents of D:\project:"
+          Get-ChildItem "D:\project" | ForEach-Object { Write-Host $_.Name }
 
       - name: Setup JDK 17
         uses: actions/setup-java@v4
@@ -42,6 +54,7 @@ jobs:
         id: fabric-yarn-cache-dir-path
         shell: pwsh
         run: |
+          cd D:\project
           $dir = yarn cache dir
           echo "dir=$dir" >> $env:GITHUB_OUTPUT
 
@@ -50,14 +63,15 @@ jobs:
         id: yarn-cache
         with:
           path: ${{ steps.fabric-yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-fabric-yarn-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-fabric-yarn-${{ hashFiles('D:/project/**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-fabric-yarn-
 
       - name: Install node_modules for FabricExample/
         shell: pwsh
         run: |
-          yarn install --frozen-lockfile --cwd FabricExample
+          cd D:\project\FabricExample
+          yarn install --frozen-lockfile
 
       - name: Restore Gradle cache
         uses: actions/cache@v4
@@ -65,12 +79,12 @@ jobs:
           path: |
             C:\Users\runneradmin\.gradle\caches
             C:\Users\runneradmin\.gradle\wrapper
-          key: ${{ runner.os }}-fabric-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          key: ${{ runner.os }}-fabric-gradle-${{ hashFiles('D:/project/FabricExample/android/**/*.gradle*', 'D:/project/FabricExample/android/**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-fabric-gradle-
 
       - name: Run Gradle Build for FabricExample/android/
         shell: pwsh
         run: |
-          cd FabricExample\android
+          cd D:\project\FabricExample\android
           .\gradlew.bat assembleDebug --build-cache -PreactNativeArchitectures=arm64-v8a
