--- a/example/package.json
+++ b/example/package.json
@@ -14,11 +14,11 @@
     "@gorhom/bottom-sheet": "5.2.6",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
-    "@react-navigation/bottom-tabs": "^6.6.1",
-    "@react-navigation/elements": "^2.2.5",
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/native-stack": "^6.11.0",
-    "@react-navigation/stack": "^6.4.1",
+    "@react-navigation/bottom-tabs": "^7.9.0",
+    "@react-navigation/elements": "2.6.4",
+    "@react-navigation/native": "7.1.17",
+    "@react-navigation/native-stack": "7.3.26",
+    "@react-navigation/stack": "7.3.6",
     "lottie-react-native": "^7.3.4",
     "react": "19.1.0",
     "react-native": "0.81.4",
