--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -6,6 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "web": "webpack serve --mode=development --config webpack.config.js",
+    "build:web": "webpack --mode=production --config webpack.config.js",
     "start": "react-native start",
     "test": "jest",
     "postinstall": "patch-package"
