--- a/.github/workflows/build-android-fabric-windows.yml
+++ b/.github/workflows/build-android-fabric-windows.yml
@@ -24,20 +24,20 @@ on:
 
 jobs:
   build:
-    name: 💠 Build Android Fabric Example App
+    name: 💠 Build Android on Windows
     runs-on: windows-latest
 
     steps:
       - uses: actions/checkout@v4
-      - name: Create sample app
-        run: npx react-native init windows
       - name: Setup JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: "microsoft"
           java-version: "17"
+      - name: Create sample app
+        run: npx @react-native-community/cli@latest init windows --version 0.83.1
       - name: Get yarn cache directory path
-        id: fabric-yarn-cache-dir-path
+        id: fabric-windows-yarn-cache-dir-path
         shell: pwsh
         run: |
           $dir = yarn cache dir
@@ -46,25 +46,25 @@ jobs:
         uses: actions/cache@v4
         id: yarn-cache
         with:
-          path: ${{ steps.fabric-yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-fabric-yarn-${{ hashFiles('**/yarn.lock') }}
+          path: ${{ steps.fabric-windows-yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-fabric-windows-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
-            ${{ runner.os }}-fabric-yarn-
-      - name: Install node_modules for FabricExample/
+            ${{ runner.os }}-fabric-windows-yarn-
+      - name: Install node_modules for windows/
         shell: pwsh
         run: |
-          yarn install --frozen-lockfile --cwd FabricExample
+          yarn install --frozen-lockfile --cwd windows
       - name: Restore Gradle cache
         uses: actions/cache@v4
         with:
           path: |
             C:\Users\runneradmin\.gradle\caches
             C:\Users\runneradmin\.gradle\wrapper
-          key: ${{ runner.os }}-fabric-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          key: ${{ runner.os }}-fabric-windows-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
-            ${{ runner.os }}-fabric-gradle-
-      - name: Run Gradle Build for FabricExample/android/
+            ${{ runner.os }}-fabric-windows-gradle-
+      - name: Run Gradle Build for windows/android/
         shell: pwsh
         run: |
-          cd FabricExample\android
+          cd windows\android
           .\gradlew.bat assembleDebug --build-cache -PreactNativeArchitectures=arm64-v8a
