fix: we again met 260 limit characters (safe area context), try bot to clone a repo

--- a/.github/workflows/build-android-fabric-windows.yml
+++ b/.github/workflows/build-android-fabric-windows.yml
@@ -7,20 +7,16 @@ on:
     paths:
       - ".github/workflows/build-android-fabric-windows.yml"
       - "android/**"
-      - "FabricExample/android/**"
       - "yarn.lock"
-      - "FabricExample/yarn.lock"
-      - "FabricExample/patches/**"
       - "src/specs/**"
+      - "common/**"
   pull_request:
     paths:
       - ".github/workflows/build-android-fabric-windows.yml"
       - "android/**"
-      - "FabricExample/android/**"
       - "yarn.lock"
-      - "FabricExample/yarn.lock"
-      - "FabricExample/patches/**"
       - "src/specs/**"
+      - "common/**"
 
 jobs:
   build:
@@ -28,7 +24,6 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - uses: actions/checkout@v4
       - name: Setup JDK 17
         uses: actions/setup-java@v4
         with:
@@ -54,6 +49,9 @@ jobs:
         shell: pwsh
         run: |
           yarn install --frozen-lockfile --cwd windows
+      - name: Link keyboard controller
+        shell: pwsh
+        run: yarn add react-native-keyboard-controller@link:../
       - name: Restore Gradle cache
         uses: actions/cache@v4
         with:
