--- a/.github/workflows/build-android-fabric-windows.yml
+++ b/.github/workflows/build-android-fabric-windows.yml
@@ -25,15 +25,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-        with:
-          path: "rnkc"
       - name: Setup JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: "microsoft"
           java-version: "17"
       - name: Create sample app
-        run: npx @react-native-community/cli@latest init windows --version 0.83.1
+        run: cd ..\..\ && npx @react-native-community/cli@latest init windows --version 0.83.1
       - name: Get yarn cache directory path
         id: fabric-windows-yarn-cache-dir-path
         shell: pwsh
@@ -51,7 +49,7 @@ jobs:
       - name: Install node_modules for windows/
         shell: pwsh
         run: |
-          yarn install --frozen-lockfile --cwd windows
+          cd ..\..\ && yarn install --frozen-lockfile --cwd windows
       # - name: Link keyboard controller
       #   shell: pwsh
       #   run: yarn add react-native-keyboard-controller@link:../
@@ -67,5 +65,5 @@ jobs:
       - name: Run Gradle Build for windows/android/
         shell: pwsh
         run: |
-          cd windows\android
+          cd ..\..\windows\android
           .\gradlew.bat assembleDebug --build-cache -PreactNativeArchitectures=arm64-v8a
