--- a/.github/workflows/build-android-fabric-windows.yml
+++ b/.github/workflows/build-android-fabric-windows.yml
@@ -46,6 +46,10 @@ jobs:
           key: ${{ runner.os }}-fabric-windows-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-fabric-windows-yarn-
+      - name: Install node_modules
+        shell: pwsh
+        run: |
+          yarn install --frozen-lockfile
       - name: Install node_modules for windows/
         shell: pwsh
         run: |
