ci: track changes in `common` for fabric-related jobs

--- a/.github/workflows/build-android-fabric.yml
+++ b/.github/workflows/build-android-fabric.yml
@@ -12,6 +12,7 @@ on:
       - "FabricExample/yarn.lock"
       - "FabricExample/patches/**"
       - "src/specs/**"
+      - "common/**"
   pull_request:
     paths:
       - ".github/workflows/build-android-fabric.yml"
@@ -21,6 +22,7 @@ on:
       - "FabricExample/yarn.lock"
       - "FabricExample/patches/**"
       - "src/specs/**"
+      - "common/**"
 
 jobs:
   build:
