--- a/.github/workflows/build-ios-fabric.yml
+++ b/.github/workflows/build-ios-fabric.yml
@@ -13,6 +13,7 @@ on:
       - "FabricExample/yarn.lock"
       - "FabricExample/patches/**"
       - "src/specs/**"
+      - "common/**"
   pull_request:
     branches:
       - main
@@ -25,6 +26,7 @@ on:
       - "FabricExample/yarn.lock"
       - "FabricExample/patches/**"
       - "src/specs/**"
+      - "common/**"
 
 jobs:
   build:
