--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "5.2.6",
+    "@legendapp/list": "^2.0.19",
     "@lottiefiles/dotlottie-react": "^0.17.10",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
