fix: windows builds (#1248)
## 📜 Description

Added a job for building example app on windows and shortened `codegen`
name to fix build errors.

## 💡 Motivation and Context

This is a continuation of
https://github.com/kirillzyusko/react-native-keyboard-controller/pull/1251

In
https://github.com/kirillzyusko/react-native-keyboard-controller/pull/1251
we shortened codegen name from `reactnativekeyboardcontroller` till
`keyboardcontroller`. In this PR we make it even shorter: from
`keyboardcontroller` -> `RNKC`. The `keyboardcontroller` has 18 symbols,
`safeareacontext` (very popular lib) has 15 symbols, so our lib will
exceed symbols limitation, when `safeareacontext` will not. Now I make
length only 4 symbols. While I'm not a big fan of making
variables/pathname shorter, because it makes more effort for newcomers
to understand the code, but here I'm ready to sacrifice readability in
favor of smaller amount of issues with complaints that builds are
failing on windows.

I hope in 2026 RN team will update Ninja/CMake to newest version and
this limitation will gone, but for now let's use shorter name and fix
windows build errors.

Also I'd like to say few words about CI job. I've tried to assemble
example app on windows runners, but I had compilation errors because of
reanimated. So I went in a different direction. I create a new app and
then link my lib locally to this project (just to check compilation
issues). Not very elegant but it does its job - it gives me more
confidence, that windows builds are not occasionally get broken 🤞

Closes
https://github.com/kirillzyusko/react-native-keyboard-controller/issues/1247
https://github.com/kirillzyusko/react-native-keyboard-controller/issues/1147
https://github.com/kirillzyusko/react-native-keyboard-controller/issues/1253

## 📢 Changelog

<!-- High level overview of important changes -->
<!-- For example: fixed status bar manipulation; added new types
declarations; -->
<!-- If your changes don't affect one of platform/langu

--- a/.github/workflows/build-android-fabric.yml
+++ b/.github/workflows/build-android-fabric.yml
@@ -26,7 +26,7 @@ on:
 
 jobs:
   build:
-    name: Build Android Fabric Example App
+    name: 🖥️ Build Android Fabric Example App
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
