--- a/.github/workflows/verify-ios.yml
+++ b/.github/workflows/verify-ios.yml
@@ -66,6 +66,8 @@ jobs:
       - uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: "16.4"
+      - name: List all available simulators
+        run: xcrun simctl list
 
       - name: Install xcpretty
         run: gem install xcpretty
