feat: link more community libraries

--- a/example/package.json
+++ b/example/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "7.1.17",
     "@react-navigation/native-stack": "7.3.26",
     "@react-navigation/stack": "7.3.6",
+    "@shopify/flash-list": "1.8.3",
     "lottie-react-native": "^7.3.4",
     "react": "19.1.0",
     "react-native": "0.81.4",
@@ -29,7 +30,8 @@
     "react-native-safe-area-context": "5.6.1",
     "react-native-screens": "4.16.0",
     "react-native-text-input-mask": "3.1.5",
-    "react-native-toast-message": "^2.3.0"
+    "react-native-toast-message": "^2.3.0",
+    "react-native-webview": "^13.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
