--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "7.1.17",
     "@react-navigation/native-stack": "7.3.26",
     "@react-navigation/stack": "7.3.6",
+    "@shopify/flash-list": "^2.2.0",
     "lottie-react-native": "^7.3.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -34,6 +35,7 @@
     "react-native-screens": "4.16.0",
     "react-native-toast-message": "^2.3.0",
     "react-native-web": "^0.21.2",
+    "react-native-webview": "^13.16.0",
     "react-native-worklets": "^0.6.0"
   },
   "devDependencies": {
