--- a/.github/workflows/build-ios-fabric.yml
+++ b/.github/workflows/build-ios-fabric.yml
@@ -92,6 +92,13 @@ jobs:
             ${{ runner.os }}-fabric-pods-
       - name: Install Pods
         run: export USE_CCACHE=1 && pod install || pod update --repo-update
+      - name: Restore DerivedData cache
+        uses: actions/cache@v5
+        with:
+          path: FabricExample/ios/build
+          key: ${{ runner.os }}-dd-${{ hashFiles('**/Podfile.lock', '**/Gemfile.lock', '**/package.json', '**/yarn.lock') }}-xcode16.4
+          restore-keys: |
+            ${{ runner.os }}-dd-
       - name: Install xcpretty
         run: gem install xcpretty
       - name: Build App
