fix: use shared xcode version

--- a/.github/workflows/build-ios-fabric.yml
+++ b/.github/workflows/build-ios-fabric.yml
@@ -35,12 +35,14 @@ jobs:
     defaults:
       run:
         working-directory: FabricExample/ios
+    env:
+      XCODE_VERSION: "16.4"
     steps:
       - uses: actions/checkout@v4
 
       - uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: "16.4"
+          xcode-version: ${{ env.XCODE_VERSION }}
       - name: List all available simulators
         run: xcrun simctl list
 
@@ -96,7 +98,7 @@ jobs:
         uses: actions/cache@v5
         with:
           path: FabricExample/ios/build
-          key: ${{ runner.os }}-dd-${{ hashFiles('**/Podfile.lock', '**/Gemfile.lock', '**/package.json', '**/yarn.lock') }}-xcode16.4
+          key: ${{ runner.os }}-fabric-derived-data-${{ hashFiles('**/Podfile.lock', '**/Gemfile.lock', '**/package.json', '**/yarn.lock') }}-xcode-${{ env.XCODE_VERSION }}
           restore-keys: |
             ${{ runner.os }}-dd-
       - name: Install xcpretty
