ci: cache `DerivedData` (#1274)
## 📜 Description

Added `DerivedData` caching.

## 💡 Motivation and Context

Caching `DerivedData` is very similar to how local XCode works. Whenever
you assemble a build next time you'll re-use previous compilation of
files that weren't changed.

So in this PR I'm bringing this concept to CI and also cache
`DerivedData` folder. In my tests I could see that build time goes down
from 3m to 1m, which is a big win I think.

## 📢 Changelog

<!-- High level overview of important changes -->
<!-- For example: fixed status bar manipulation; added new types
declarations; -->
<!-- If your changes don't affect one of platform/language below - then
remove this platform/language -->

### CI

- cache `DerivedData` for `e2e` builds;
- cache `DerivedData` for `paper` builds;
- cache `DerivedData` for `fabric` builds;

## 🤔 How Has This Been Tested?

Tested via CI.

## 📸 Screenshots (if appropriate):

|Before|After|
|-------|-----|
|<img width="1306" height="43" alt="image"
src="https://github.com/user-attachments/assets/44d21838-fe08-40de-8c55-e8a4c9b6e7d3"
/>|<img width="1303" height="45" alt="image"
src="https://github.com/user-attachments/assets/027a9fb1-a200-4427-beb9-25a4956f9d57"
/>|

## 📝 Checklist

- [x] CI successfully passed
- [x] I added new mocks and corresponding unit-tests if library API was
changed

--- a/.github/workflows/build-ios-fabric.yml
+++ b/.github/workflows/build-ios-fabric.yml
@@ -35,12 +35,14 @@ jobs:
     defaults:
       run:
         working-directory: FabricExample/ios
+    env:
+      XCODE_VERSION: "16.4"
     steps:
       - uses: actions/checkout@v4
 
       - uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: "16.4"
+          xcode-version: ${{ env.XCODE_VERSION }}
       - name: List all available simulators
         run: xcrun simctl list
 
@@ -92,6 +94,13 @@ jobs:
             ${{ runner.os }}-fabric-pods-
       - name: Install Pods
         run: export USE_CCACHE=1 && pod install || pod update --repo-update
+      - name: Restore DerivedData cache
+        uses: actions/cache@v5
+        with:
+          path: FabricExample/ios/build
+          key: ${{ runner.os }}-fabric-derived-data-${{ hashFiles('**/Podfile.lock', '**/Gemfile.lock', '**/package.json', '**/yarn.lock') }}-xcode-${{ env.XCODE_VERSION }}
+          restore-keys: |
+            ${{ runner.os }}-fabric-derived-data
       - name: Install xcpretty
         run: gem install xcpretty
       - name: Build App
