--- a/.github/workflows/build-ios-fabric.yml
+++ b/.github/workflows/build-ios-fabric.yml
@@ -98,9 +98,9 @@ jobs:
         uses: actions/cache@v5
         with:
           path: FabricExample/ios/build
-          key: ${{ runner.os }}-fabric-derived-data-${{ hashFiles('**/Podfile.lock', '**/Gemfile.lock', '**/package.json', '**/yarn.lock') }}-xcode-${{ env.XCODE_VERSION }}
+          key: ${{ runner.os }}-fabric-derived-data-xcode-${{ env.XCODE_VERSION }}-${{ hashFiles('**/Podfile.lock', '**/Gemfile.lock', '**/package.json', '**/yarn.lock') }}
           restore-keys: |
-            ${{ runner.os }}-fabric-derived-data
+            ${{ runner.os }}-fabric-derived-data-xcode-${{ env.XCODE_VERSION }}-
       - name: Install xcpretty
         run: gem install xcpretty
       - name: Build App
