--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -90,5 +90,10 @@
   },
   "engines": {
     "node": ">=20"
+  },
+  "reanimated": {
+    "staticFeatureFlags": {
+      "USE_COMMIT_HOOK_ONLY_FOR_REACT_COMMITS": true
+    }
   }
 }
