--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "5.2.6",
+    "@legendapp/list": "3.0.0-beta.32",
     "@lottiefiles/dotlottie-react": "^0.17.10",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
@@ -36,7 +37,8 @@
     "react-native-toast-message": "^2.3.0",
     "react-native-web": "^0.21.2",
     "react-native-webview": "^13.16.0",
-    "react-native-worklets": "^0.7.1"
+    "react-native-worklets": "^0.7.1",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -88,5 +90,10 @@
   },
   "engines": {
     "node": ">=20"
+  },
+  "reanimated": {
+    "staticFeatureFlags": {
+      "USE_COMMIT_HOOK_ONLY_FOR_REACT_COMMITS": true
+    }
   }
 }
